@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 01:42:48 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 02:38:44 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -30,5 +30,11 @@
   <description>2NE1韓國女子演唱組合重聚演唱會經典回歸星期日晚上奧林匹克公園奧林匹克廳OlympicHall響起了ComeBackHome的歌聲標誌著2NE1韓國女子演唱組合的重聚演唱會正式開始這是該組合十多年來的首次演唱會粉絲們的熱情和歡呼聲充滿了整個場館2NE1的四名成員朴山達拉SandaraPark李彩麟CL朴...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 01:42:48 +0800</pubDate>
+</item><item>
+  <title>K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？</title>
+  <link>https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html</link>
+  <description>aespa即將推出新迷你專輯aespa將於10月21日推出第五張迷你專輯官方已經上傳了一系列的預告內容包括六首歌曲的片段和一個專門的網站讓粉絲可以混合和下載主打歌曲的部分這張專輯的...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 02:38:44 +0800</pubDate>
 </item></channel>
 </rss>
