@@ -1,0 +1,267 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-POP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001\u4e2d\u672c\u60a0\u592a\u3001SF9\u3001\u6cb3\u6210\u96f2\u7b49\u5927\u5496\u63a5\u9023\u767c\u65b0\u4f5c\uff0c\u8ab0\u80fd\u596a\u4e0b\u5341\u6708\u4efd\u7684\u97f3\u6a02\u738b\u5ea7\uff1f", "description": "K-POP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001\u4e2d\u672c\u60a0\u592a\u3001SF9\u3001\u6cb3\u6210\u96f2\u7b49\u5927\u5496\u63a5\u9023\u767c\u65b0\u4f5c\uff0c\u8ab0\u80fd\u596a\u4e0b\u5341\u6708\u4efd\u7684\u97f3\u6a02\u738b\u5ea7\uff1f", "url": "https://www.famechos.me/news/K-POP\u5927\u7206\u70b8\uff01aespa\u3001NCT\u3001\u4e2d\u672c\u60a0\u592a\u3001SF9\u3001\u6cb3\u6210\u96f2\u7b49\u5927\u5496\u63a5\u9023\u767c\u65b0\u4f5c\uff0c\u8ab0\u80fd\u596a\u4e0b\u5341\u6708\u4efd\u7684\u97f3\u6a02\u738b\u5ea7\uff1f.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T02:38:30.925820+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html"/>
+<meta name="description" content="十月份K-POP界大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下音樂王座？最新音樂動態報導。">
+
+<meta name="keywords" content="K-POP,aespa,NCT,中本悠太,SF9,河成雲,音樂王座,十月份新作,韓流音樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html" />
+        <meta property="og:title" content="K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？" />
+        <meta property="og:description" content="K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？" />
+        <meta property="twitter:description" content="K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>aespa 將於 10 月 21 日推出第五張迷你專輯。官方已經上傳了一系列的預告內容，包括六首歌曲的片段和一個專門的網站，讓粉絲可以混合和下載主打歌曲的部分。</p>
+<p>這張專輯的發行正值 aespa 進行第二次國際巡迴演唱會「Synk: Parallel Line」，該巡迴演唱會已經擴展到北美、拉丁美洲和歐洲。SM娛樂宣布，aespa 將在 29 個城市舉辦 41 場演唱會，最後一場演唱會將於 3 月 12 日在西班牙馬德里舉行。</p>
+<h2>中本悠太推出首張個人專輯，NCT成員再創佳績</h2>
+<p>NCT 的中本悠太發布了他的首張個人專輯「Depth」，這張專輯是他在日本的首張個人專輯。所有七首歌曲都已經在音樂平台上發布，包括主打歌曲「卸掉面具」的音樂視頻。歌曲的標題暗示了他想要展現真實的自己，不隱藏任何東西，並接受任何挑戰。</p>
+<p>實體專輯將於 11 月 13 日發行，他將成為 NCT 第六位發行個人專輯的成員。</p>
+<h2>太陽發布首張個人單曲，SF9成員單飛</h2>
+<p>SF9 的太陽將於 10 月 6 日發布他的首張個人單曲。數位單曲「擁抱我」的視覺效果包括了歌曲的部分歌詞，他鼓勵聽眾儘管面臨困難仍要朝著夢想前進。</p>
+這位男團的主舞者在 6 月份的個人粉絲演唱會上首次表演了這首自作曲，並將在 10 月 4-5 日的團體粉絲演唱會上再次表演。<h2>河成雲否認參與抄襲爭議</h2>
+<p>河成雲通過 Big Planet娛樂發表聲明，否認參與了歌曲「What Are We」的抄襲爭議。他表示自己只參與了戲劇原聲帶的製作，與抄襲爭議無關。</p>
+<h2>河成雲的OST歌曲參與引發爭議</h2>
+<p>河成雲表示，他只參與了歌曲的錄製，該歌曲是電影《隔壁的愛情》的OST的一部分。他並沒有參與歌曲的創作或編曲。歌曲於10月1日發行。</p>
+<p>歌手白藝潾在社交媒體上表達了她的疑慮，認為這首歌與她2019年發行的《0310》相似，並稱之為她的歌曲的“翻唱”。</p>
+<p>河成雲將擔任選秀節目《Project 7》的聲樂導演，該節目將於10月18日播出。他曾是《Produce 101》的決賽選手之一。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4TWR90KJl84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html">KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html">韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html">BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
