@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 02:36:14 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 02:38:44 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -43,5 +43,11 @@
   <description>東京活動（2024年10月7日至13日） 。日本的萬聖節與眾不同，東京在10月31日前會出現許多相關活動。這些活動包括超自然貓節和立川妖怪盂蘭盆舞等。如果你不喜歡恐怖的活動，可以前往遍布首都的許多市民節。。。立川妖怪盂蘭盆舞</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 02:36:14 +0800</pubDate>
+</item><item>
+  <title>K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？</title>
+  <link>https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html</link>
+  <description>aespa即將推出新迷你專輯aespa將於10月21日推出第五張迷你專輯官方已經上傳了一系列的預告內容包括六首歌曲的片段和一個專門的網站讓粉絲可以混合和下載主打歌曲的部分這張專輯的...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 02:38:44 +0800</pubDate>
 </item></channel>
 </rss>
