@@ -44,4 +44,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、中本悠太、SF9、河成雲等大咖接連發新作，誰能奪下十月份的音樂王座？.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T02:38:44+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
